--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -99,6 +99,7 @@ main {
         }
     }
     main {
+        width: calc(100% - 200px);
         margin-left: 200px;
         margin-top: 0px;
     }
