--- a/scss/_small-hero.scss
+++ b/scss/_small-hero.scss
@@ -1,7 +1,7 @@
 #small-hero {
     figure {
         img {
-            width: 100vw;
+            width: 100%;
             height: calc(40vh);
             object-fit: cover;
             filter: brightness(50%);
@@ -26,8 +26,9 @@
 @media (min-width: 768px){
     #small-hero {
         figure {
+            width: 100%;
             img {
-                width: calc(100vw - 200px);
+                width: 100%;
             }
             figcaption {
                 h1 {
